- use slf4j (allow code reuse under Android, with slf4j-android) - add an action "--index-last-blocks" to main - add an action "--index-all-blocks" to main